[gd_scene load_steps=10 format=2]

[ext_resource path="res://Background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Jugador/jugador.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://spawn_fireball.gd" type="Script" id=4]
[ext_resource path="res://spawn_obtaculos.gd" type="Script" id=5]
[ext_resource path="res://spawn_tambor.gd" type="Script" id=6]
[ext_resource path="res://SoundEffects/Ambiente/RPG - Costal Town Background.wav" type="AudioStream" id=7]
[ext_resource path="res://SoundEffects/Ambiente/olas 3.wav" type="AudioStream" id=8]
[ext_resource path="res://spaw_bandera.gd" type="Script" id=9]

[node name="main" type="Node2D" groups=[
"principal",
]]
pause_mode = 2
position = Vector2( 0, 2 )
script = ExtResource( 3 )

[node name="background" parent="." instance=ExtResource( 1 )]
pause_mode = 1

[node name="jugador" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 55.6568, -4.07108 )

[node name="spawn_obtaculos" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 1081.88, 514.774 )
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="spawn_fireball" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 212.355, 491.314 )
scale = Vector2( 3, 3 )
script = ExtResource( 4 )

[node name="barra_vidas" type="Position2D" parent="." groups=[
"gui",
]]
position = Vector2( 41.0122, 43.8406 )

[node name="spawn_tambor" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 1094, 350 )
script = ExtResource( 6 )

[node name="barra_tambor" type="Position2D" parent="." groups=[
"gui",
]]
position = Vector2( 42, 104 )

[node name="spaw_bandera" type="Position2D" parent="."]
position = Vector2( 1090.6, 282.704 )
script = ExtResource( 9 )

[node name="barra_bandera" type="Position2D" parent="." groups=[
"gui",
]]
position = Vector2( 906, 46 )

[node name="musica_principal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.116
mix_target = 1

[node name="ambiente" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -17.165
autoplay = true
[connection signal="fuego" from="jugador" to="." method="_on_jugador_fuego"]
[connection signal="finished" from="musica_principal" to="." method="_on_musica_principal_finished"]
[connection signal="finished" from="ambiente" to="." method="_on_ambiente_finished"]
